--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "projectn-bolt-typescript-lambda-sample",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Sample AWS Lambda app in Node.js that utilizes Bolt TypeScript Client SDK",
   "main": "app.js",
   "files": [
     "dist/"
   ],
   "scripts": {
-    "compile": "tsc && node dist/BoltS3OpsClientHandler.js",
+    "compile": "tsc && node dist/BoltAutoHealHandler.js",
     "dev": "./node_modules/nodemon/bin/nodemon.js -e ts  --exec \"npm run compile\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
+    "execution-time": "^1.4.1",
     "projectn-bolt-aws-typescript-sdk": "^1.0.0-alpha.7"
   },
   "devDependencies": {
