--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "projectn-bolt-typescript-lambda-sample",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Sample AWS Lambda app in Node.js that utilizes Bolt TypeScript Client SDK",
   "main": "app.js",
   "files": [
     "dist/"
   ],
   "scripts": {
-    "compile": "tsc && node dist/BoltS3PerfHandler.js",
+    "compile": "tsc && node dist/BoltAutoHealHandler.js",
     "dev": "./node_modules/nodemon/bin/nodemon.js -e ts  --exec \"npm run compile\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
