--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "projectn-bolt-nodejs-lambda-sample",
-  "version": "1.0.0-beta.26",
+  "version": "1.0.0",
   "description": "Sample AWS Lambda app in Node.js that utilizes Bolt TypeScript Client SDK",
   "main": "dist/index.js",
   "files": [
